--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,11 +19,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
     "expo": "^27.0.1",
-    "leaflet": "^1.3.4",
+    "express": "^4.16.3",
+    "firebase": "^5.4.1",
+    "http": "0.0.0",
     "react": "16.3.1",
-    "react-leaflet": "^2.0.1",
     "react-native": "~0.55.2",
-    "react-native-maps": "^0.21.0"
+    "react-native-maps": "^0.21.0",
+    "react-native-prompt": "^1.0.0",
+    "socket.io": "^2.1.1"
   }
 }
