--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.3",
     "firebase": "^5.4.1",
     "http": "0.0.0",
+    "native-base": "^2.8.0",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-maps": "^0.21.0",
